Fixed overflow of home page

--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -36,7 +36,6 @@
 @media screen and (max-width: 800px) {
     .container{
         grid-template-columns: auto;
-        grid-template-rows: 50% 50%;
     }
     .left-col{
         height: 40%;
